# hackathon

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  ruff.toml
data/: Antinuclear_Antibodies__ANA_.json  Autoinflammatory_Periodic_Fever_Syndromes.json  B_cell_Activation_Dysfunction.json  Biological_DMARDs__bDMARDs_.json  Bridge_Therapy.json  C_Reactive_Protein__CRP_.json  Methotrexate__MTX_.json  Monogenic_Disease_Identification.json  Nonsteroidal_Anti_Inflammatory_Drugs__NSAIDs_.json  T_cell_Activation_Dysfunction.json
examples/dataset_example/: README.md  example.py
examples/dataset_item_example/: example.py
examples/knowledge_graph_example/: knowledge_graph_example.py
examples/storage/: example.py
examples/triplets_example/: dataset_triplets_example.py  triplets_example.py
hackathon/: LITERATURE.md  README.md  sample_subgraph.json
hackathon/abacus/: README.md  hypothesis_generator.py  run_hypothesis_generation.py
hackathon/autogen/: .env.example  README.md  agents.py  functions.py  generate_hypothesis.py  groupchat.py  hypothesis_generator.py  langfuse.py  llm_config.py  prompts.py
src/: pyproject.toml
src/ard.egg-info/: PKG-INFO  (+1 more)
tests/: conftest.py  test_dataset.py  test_dataset_item.py  test_dataset_item_storage.py  test_dataset_structure.py  test_embedder.py  test_hypothesis.py  test_ingestion_pipeline.py  test_knowledge_graph.py  test_metadata.py  test_metadata_citations.py  test_node_merger.py  test_research_paper.py  test_storage.py  test_storage_manager.py  test_storage_utils.py  test_subgraph.py  test_triplets.py
(+164 files in other folders)
