[project]
name = "ard"
version = "0.1.0"
description = "ARD is an intelligent system that uses agent-based approaches to ingest scientific literature, build knowledge graphs, and generate novel research hypotheses."
readme = "README.md"
authors = [
    { name = "Damian Rolek", email = "d@beeard.ai" },
    { name = "Jacek Wiland", email = "j@beeard.ai" },
    { name = "Kuba Kwiecien", email = "k@beeard.ai" },
    { name = "Mateusz Walczak", email = "m@beeard.ai" },
]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.10",
    "dotenv>=0.9.9",
    "langchain-anthropic>=0.3.9",
    "langchain-core>=0.3.43",
    "langchain-openai>=0.3.8",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "sentence-transformers>=3.4.1",
    "click>=8.1.7",
    "langfuse>=2.59.7",
    "langchain>=0.3.20",
    "neo4j>=5.28.1",
    "opentelemetry-sdk>=1.31.0",
    "opentelemetry-exporter-otlp>=1.31.0",
    "langchain-community>=0.3.19",
    "autogen>=0.8.2",
    "ag2[openai]>=0.8.2",
    "openlit>=1.26.0",
    "langgraph>=0.3.18",
    "arxiv>=2.1.3",
    "xmltodict>=0.14.2",
    "langchain-google-genai>=2.1.0",
]

[project.scripts]
ard = "ard.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "moto>=5.1.0",
    "ruff>=0.11.0",
    "tomli>=2.2.1",
]
